--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="login-page">
+  <div class="login-content">
+    <div class="login-image">
+      <img src="assets/loginback.png" alt="Imagen de login" />
+    </div>
+    <div class="login-container">
+      <div class="login-group">
+        <h2 class="h2-login">
+          INICIAR SESIÓN EN <span class="h2-login1">MARGARED</span>
+        </h2>
+        <h2 class="h2-completa">COMPLETA LOS SIGUIENTES CAMPOS POR FAVOR</h2>
+      </div>
+      <form (submit)="handleLogin($event)" class="login-form">
+        <label>Usuario</label>
+        <input
+          class="input-user"
+          type="text"
+          placeholder="Usuario"
+          [(ngModel)]="username"
+          name="username"
+          required
+        /><br />
+        <label>Contraseña</label>
+        <input
+          class="input-password"
+          type="password"
+          placeholder="Contraseña"
+          [(ngModel)]="password"
+          name="password"
+          required
+        /><br />
+        <div class="button-container">
+          <button class="ingresar-button" type="submit">Ingresar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
