--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,11 +6,11 @@
   <div class="dashboard-content">
     <div class="summary-cards">
       <div class="card blue">
-        <h3>Total de Practicantes</h3>
+        <h3>Total de Empleados</h3>
         <p>177</p>
       </div>
       <div class="card teal">
-        <h3>Practicantes a tiempo</h3>
+        <h3>Empleados a tiempo</h3>
         <p>86.11%</p>
       </div>
       <div class="card green">
