--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -124,7 +124,7 @@
           >
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/manager']" class="nav-link"
+          <a [routerLink]="['/assign-resources']" class="nav-link"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               class="icon icon-tabler icon-tabler-3d-rotate"
