--- a/src/app/components/roles/roles.component.html
+++ b/src/app/components/roles/roles.component.html
@@ -3,8 +3,5 @@
   <app-shared-dashboard></app-shared-dashboard>
 
   <!-- Contenido específico del Dashboard -->
-  <div class="dashboard-content">
-    <h1>Contenido Específico del Dashboard</h1>
-    <p>PINGAAAAAAAAASDDSDAAA.</p>
-  </div>
+  <div class="dashboard-content"></div>
 </div>
