--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<div class="dashboard-container">
-  <!-- Barra lateral compartida -->
-  <app-shared-dashboard></app-shared-dashboard>
+<app-shared-dashboard></app-shared-dashboard>
+<!--<div class="dashboard-container"> 
 
-  <!-- Contenido específico del Dashboard -->
+
+  Contenido específico del Dashboard 
   <div class="dashboard-content">
     <div class="summary-cards">
       <div class="card blue">
@@ -47,10 +47,10 @@
               <td><span class="late">10:50 AM</span></td>
               <td>12:00 PM</td>
             </tr>
-            <!-- Agrega más filas aquí -->
+            Agrega más filas aquí 
           </tbody>
         </table>
       </div>
     </div>
   </div>
-</div>
+</div> -->
