--- a/src/app/components/employees/employee-modal/employee-modal.component.css
+++ b/src/app/components/employees/employee-modal/employee-modal.component.css
@@ -4,27 +4,19 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.6
-  ); /* Aumenta la opacidad para mejor contraste */
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo opaco */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000;
 }
 
 .modal-content {
-  background-color: white;
-  padding: 25px; /* Aumenta el padding para un mejor espacio interno */
-  border-radius: 10px; /* Bordes más redondeados */
-  width: 100%;
-  max-width: 500px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
-  overflow-y: auto;
-  max-height: 80vh;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  max-width: 100%;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .input-group {
