--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -48,7 +48,7 @@
               <path d="M16 19h6" />
               <path d="M19 16v6" />
               <path d="M6 21v-2a4 4 0 0 1 4 -4h4" /></svg
-            >Roles</a
+            >Proyectos</a
           >
         </li>
         <li class="nav-item">
