--- a/src/app/components/work-hours/work-hours.component.html
+++ b/src/app/components/work-hours/work-hours.component.html
@@ -98,6 +98,7 @@
       (closeModal)="closeModal()"
       [employees]="employees"
       (saveHours)="handleSaveHours($event)"
+      (saveHoursEvent)="handleSaveHours($event)"
     ></app-work-hours-modal>
   </div>
 </div>
