--- a/src/app/components/employees/employee-modal/employee-modal.component.html
+++ b/src/app/components/employees/employee-modal/employee-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-overlay">
   <div class="modal-content">
     <h2>Nuevo Empleado</h2>
-    <div>
+    <div class="modal-grid">
       <div class="input-group">
         <label for="dni">DNI:</label>
         <input type="text" id="dni" [(ngModel)]="dni" required />
@@ -26,11 +26,10 @@
         <label for="entryDate">Fecha de Ingreso:</label>
         <input type="date" id="entryDate" [(ngModel)]="entryDate" required />
       </div>
-      <div class="button-group">
-        <button type="button" (click)="close()">Cancelar</button>
-        <button type="button" (click)="addEmployee()">Agregar</button>
-        <!--cosillo lindo para agregar funcion OWO-->
-      </div>
+    </div>
+    <div class="button-group">
+      <button type="button" (click)="close()">Cancelar</button>
+      <button type="button" (click)="addEmployee()">Agregar</button>
     </div>
   </div>
 </div>
