--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -9,142 +9,45 @@
     <nav>
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a [routerLink]="['/dashboard']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-brand-airtable"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M3 10v8l7 -3v-2.6z" />
-              <path d="M3 6l9 3l9 -3l-9 -3z" />
-              <path d="M14 12.3v8.7l7 -3v-8z" /></svg
-            >Panel de Control</a
+          <div
+            class="section-title"
+            [class.active]="activeSections.has('gestiones')"
+            (click)="toggleSection('gestiones')"
           >
+            Gestiones
+          </div>
+          <ul *ngIf="activeSections.has('gestiones')" class="section-content">
+            <li><a [routerLink]="['/employees']">Empleados</a></li>
+            <li><a [routerLink]="['/machinery']">Maquinaria</a></li>
+            <li><a [routerLink]="['/dashboard']">Panel de Control</a></li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/roles']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-user-plus"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
-              <path d="M16 19h6" />
-              <path d="M19 16v6" />
-              <path d="M6 21v-2a4 4 0 0 1 4 -4h4" /></svg
-            >Proyectos</a
+          <div
+            class="section-title"
+            [class.active]="activeSections.has('operaciones')"
+            (click)="toggleSection('operaciones')"
           >
+            Operaciones
+          </div>
+          <ul *ngIf="activeSections.has('operaciones')" class="section-content">
+            <li><a [routerLink]="['/work-hours']">Horas Laborales</a></li>
+            <li><a [routerLink]="['/proyectos']">Proyectos</a></li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/employees']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-file-description"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M14 3v4a1 1 0 0 0 1 1h4" />
-              <path
-                d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
-              />
-              <path d="M9 17h6" />
-              <path d="M9 13h6" /></svg
-            >Empleados</a
+          <div
+            class="section-title"
+            [class.active]="activeSections.has('recursos')"
+            (click)="toggleSection('recursos')"
           >
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/work-hours']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-alarm"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M12 13m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
-              <path d="M12 10l0 3l2 0" />
-              <path d="M7 4l-2.75 2" />
-              <path d="M17 4l2.75 2" /></svg
-            >Horas Laborales</a
-          >
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/machinery']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-bulldozer"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M2 17a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" />
-              <path d="M12 17a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" />
-              <path d="M19 13v4a2 2 0 0 0 2 2h1" />
-              <path d="M14 19h-10" />
-              <path d="M4 15h10" />
-              <path d="M9 11v-5h2a3 3 0 0 1 3 3v6" />
-              <path d="M5 15v-3a1 1 0 0 1 1 -1h8" />
-              <path d="M19 17h-3" /></svg
-            >Maquinaria</a
-          >
-        </li>
-        <li class="nav-item">
-          <a [routerLink]="['/assign-resources']" class="nav-link"
-            ><svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-3d-rotate"
-              width="28"
-              height="28"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="#000000"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M12 3a7 7 0 0 1 7 7v4l-3 -3" />
-              <path d="M22 11l-3 3" />
-              <path d="M8 15.5l-5 -3l5 -3l5 3v5.5l-5 3z" />
-              <path d="M3 12.5v5.5l5 3" />
-              <path d="M8 15.545l5 -3.03" /></svg
-            >Encargado</a
-          >
+            Recursos
+          </div>
+          <ul *ngIf="activeSections.has('recursos')" class="section-content">
+            <li>
+              <a [routerLink]="['/assign-resources']">Asignar Recursos</a>
+            </li>
+          </ul>
         </li>
       </ul>
     </nav>
@@ -170,7 +73,6 @@
   <!-- Contenido principal -->
   <div class="content">
     <router-outlet></router-outlet>
-    <!-- Aquí se carga el contenido dinámico según la ruta -->
   </div>
 
   <!-- Modal de confirmación de cierre de sesión -->
