--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -32,7 +32,7 @@
           </div>
           <ul *ngIf="activeSections.has('operaciones')" class="section-content">
             <li><a [routerLink]="['/work-hours']">Horas Laborales</a></li>
-            <li><a [routerLink]="['/proyectos']">Proyectos</a></li>
+            <li><a [routerLink]="['/projects']">Proyectos</a></li>
           </ul>
         </li>
         <li class="nav-item">
