--- a/src/app/components/projects/project-modal/project-modal.component.html
+++ b/src/app/components/projects/project-modal/project-modal.component.html
@@ -2,7 +2,9 @@
   <div class="modal-content" (click)="$event.stopPropagation()">
     <h2>Agregar Proyecto</h2>
     <input [(ngModel)]="projectName" placeholder="Nombre del Proyecto" />
-    <button (click)="addProject()">Agregar</button>
-    <button (click)="close()">Cerrar</button>
+    <div class="modal-buttons">
+      <button class="btn-primary" (click)="addProject()">Agregar</button>
+      <button class="btn-secondary" (click)="close()">Cerrar</button>
+    </div>
   </div>
 </div>
