--- a/src/app/components/shared-dashboard/shared-dashboard.component.html
+++ b/src/app/components/shared-dashboard/shared-dashboard.component.html
@@ -139,8 +139,61 @@
             >Operaciones
           </div>
           <ul *ngIf="activeSections.has('operaciones')" class="section-content">
-            <li><a [routerLink]="['/calendar']">Calendario Laboral</a></li>
-            <li><a [routerLink]="['/projects']">Proyectos</a></li>
+            <li>
+              <a [routerLink]="['/calendar']"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-calendar-month"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="#000000"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z"
+                  />
+                  <path d="M16 3v4" />
+                  <path d="M8 3v4" />
+                  <path d="M4 11h16" />
+                  <path d="M7 14h.013" />
+                  <path d="M10.01 14h.005" />
+                  <path d="M13.01 14h.005" />
+                  <path d="M16.015 14h.005" />
+                  <path d="M13.015 17h.005" />
+                  <path d="M7.01 17h.005" />
+                  <path d="M10.01 17h.005" /></svg
+                >Calendario Laboral</a
+              >
+            </li>
+            <li>
+              <a [routerLink]="['/projects']"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-file-description"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="#000000"
+                  fill="none"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                  <path
+                    d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
+                  />
+                  <path d="M9 17h6" />
+                  <path d="M9 13h6" /></svg
+                >Proyectos</a
+              >
+            </li>
           </ul>
         </li>
         <li class="nav-item">
